--- a/frondend/package.json
+++ b/frondend/package.json
@@ -36,6 +36,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "recharts": "^2.5.0",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
     "sweetalert": "^2.1.2",
