--- a/frondend/package.json
+++ b/frondend/package.json
@@ -21,6 +21,7 @@
     "antd": "^5.3.3",
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
+    "chart.js": "^4.2.1",
     "install": "^0.13.0",
     "moment": "^2.29.4",
     "mui-datatables": "^4.3.0",
@@ -31,6 +32,8 @@
     "razorpay": "^2.8.6",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
+    "react-chartjs": "^1.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-pdf": "^6.2.2",
     "react-pro-sidebar": "^0.7.1",
@@ -53,7 +56,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:5000",
+  "proxy": "https://api.mohammedmishal.me",
   "eslintConfig": {
     "extends": [
       "react-app",
